fixed word break on h1 on mobile

--- a/style.css
+++ b/style.css
@@ -46,7 +46,8 @@ body {
     background-color: var(--card-backgound-color);
     box-shadow: .5rem .5rem;
     border: black 1px solid;
-    margin-inline: 2rem;
+    margin-left: .9rem;
+    margin-right: 1rem;
 }
 
 .category {
